--- a/krishimitra.html
+++ b/krishimitra.html
@@ -709,7 +709,7 @@
                     <div class="feature-card">
                         <div class="feature-icon floating">🦠</div>
                         <h5>Disease Prediction</h5>
-                        <p>Early detection system using image recognition to identify potential crop diseases.</p>
+                        <p>Early detection system using symptoms recognition to identify potential crop diseases.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-delay="300">
@@ -753,7 +753,7 @@
                         </div>
                         <div class="service-content">
                             <h5 class="service-title">Crop Disease Prediction</h5>
-                            <p class="service-description">Upload images of your crops and get instant diagnosis of diseases with treatment recommendations.</p>
+                            <p class="service-description">Write about symptoms affecting  your crops and get instant identification of disease.</p>
                             <a href="#" class="service-link">Learn More <i class="fas fa-arrow-right ms-1"></i></a>
                         </div>
                     </div>
@@ -799,7 +799,7 @@
                                 </div>
                                 <div>
                                     <h6 class="mb-0">Address</h6>
-                                    <p class="mb-0">123 Agri Lane, Farmville, AG 12345</p>
+                                    <p class="mb-0">IGDTUW , Delhi</p>
                                 </div>
                             </div>
                             <div class="contact-item">
